@@ -26,6 +26,7 @@ Verilator 5.037 devel
 * Fix inconsistent assignment error with split-var (#5984) (#5988). [Yutetsu TAKATSUKASA]
 * Fix AstAssignW conversion (#5991) (#5992). [Ryszard Rozak, Antmicro Ltd.]
 * Fix const-bit-op-tree with single-bit masks (#5993) (#5998). [Yutetsu TAKATSUKASA]
+* Fix arithmetic right-shift by constants over 32 bits (#5994).
 
 
 Verilator 5.036 2025-04-27
